Google auth and readme file added
